# ViperPad

./: .gitignore  CHANGELOG.md  Cargo.toml  MOTIVATION.md  README.md  base-8 Octal Notation.md  build-appimage.sh  build-flathub.sh  build-flatpak.sh  install-deps.sh  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: node.js.yml
packaging/appimage/: AppRun
packaging/flathub/: io.github.odioski.ViperPad.yml.in
packaging/linux/: io.github.odioski.ViperPad.desktop  io.github.odioski.ViperPad.metainfo.xml
scripts/: generate-flatpak-sources.sh
src/: app.html  editor.bundle.js  main.rs
web/: editor.js
