[package]
name = "viperpad"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "viper-pad-ide"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
libreoffice_convert_rust = "0.1.0"
pdf-extract = "0.12.0"
pulldown-cmark = "0.13"
rdocx = "0.1.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = "thin"
